Pre-alfa: - Able to handle students/teachers - Basic Validation

--- a/src/main/resources/templates/bctc/main.html
+++ b/src/main/resources/templates/bctc/main.html
@@ -2,21 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>BCPC main page</title>
+    <title>BCTC main page</title>
 </head>
 <body>
 
-  <div style="color: cadetblue">BCPC main page</div>
+  <div style="color: cadetblue">BCTC main page</div>
 
   <hr/>
 
-  <form th:action="@{/bcpc/student}">
+  <form th:action="@{/bctc/student}">
     <input type="submit" value="Students"/>
   </form>
 
   <br/>
 
-  <form th:action="@{/bcpc/teacher}">
+  <form th:action="@{/bctc/teacher}">
     <input type="submit" value="Teachers"/>
   </form>
 
