--- a/src/main/resources/templates/bctc/student/edit.html
+++ b/src/main/resources/templates/bctc/student/edit.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Create teacher</title>
+    <title>Edit student</title>
 </head>
 <body>
-    <form th:method="POST" th:action="@{/bcpc/teacher}" th:object="${teacher}">
+    <form th:method="PATCH" th:action="@{/bctc/student/{id}(id=${student.getId()})}" th:object="${student}">
         <label for="name">Name: </label>
         <input type="text" th:field="*{name}" id="name"/>
         <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">name error</div>
@@ -18,11 +18,12 @@
 
         <br/>
 
-        <input type="submit" value="Add!">
+        <input type="submit" value="Edit!">
     </form>
 
-    <form th:action="@{/bcpc/teacher}">
+    <form th:action="@{/bctc/student/{id}(id=${student.getId()})}">
         <input type="submit" value="Go back">
     </form>
+
 </body>
 </html>
