--- a/src/main/resources/templates/bctc/teacher/edit.html
+++ b/src/main/resources/templates/bctc/teacher/edit.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Edit student</title>
+    <title>Edit teacher</title>
 </head>
 <body>
-    <form th:method="PATCH" th:action="@{/bcpc/student/{id}(id=${student.getId()})}" th:object="${student}">
+    <form th:method="PATCH" th:action="@{/bctc/teacher/{id}(id=${teacher.getId()})}" th:object="${teacher}">
         <label for="name">Name: </label>
         <input type="text" th:field="*{name}" id="name"/>
         <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">name error</div>
@@ -17,11 +17,23 @@
         <div style="color: red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">age error</div>
 
         <br/>
+        <br/>
 
+        <label th:each="entry : ${studentsMap}">
+            <input type="checkbox"
+                   th:field="*{students}"
+                   th:value="${entry.key.id}"
+                   th:checked="${entry.value}">
+            <a th:href="@{/bctc/student/{id}(id=${entry.key.id})}"
+               th:text="${entry.key.name}">stud</a>
+            <br/>
+        </label>
+
+        <br/>
         <input type="submit" value="Edit!">
     </form>
 
-    <form th:action="@{/bcpc/student/{id}(id=${student.getId()})}">
+    <form th:action="@{/bctc/teacher/{id}(id=${teacher.id})}">
         <input type="submit" value="Go back">
     </form>
 
