--- a/src/main/resources/templates/bctc/teacher/show.html
+++ b/src/main/resources/templates/bctc/teacher/show.html
@@ -10,26 +10,26 @@
 
     <div style="color: cadetblue">Students:</div>
     <div th:each="student : ${teacher.getStudents()}">
-        <a th:href="@{/bcpc/student/{id}(id=${student.getId()})}"
+        <a th:href="@{/bctc/student/{id}(id=${student.getId()})}"
            th:text="${student.getName()}">student</a>
     </div>
     <div style="color: darkcyan" th:if="${teacher.getStudents().size() == 0}">No students found</div>
 
     <hr/>
 
-    <form th:action="@{/bcpc/teacher/{id}/edit(id=${teacher.getId()})}">
+    <form th:action="@{/bctc/teacher/{id}/edit(id=${teacher.getId()})}">
         <input type="submit" value="Edit">
     </form>
 
     <br/>
 
-    <form th:method="DELETE" th:action="@{/bcpc/teacher/{id}(id=${teacher.getId()})}">
+    <form th:method="DELETE" th:action="@{/bctc/teacher/{id}(id=${teacher.getId()})}">
         <input type="submit" value="Lock in basement?">
     </form>
 
     <br/>
 
-    <form th:action="@{/bcpc/teacher}">
+    <form th:action="@{/bctc/teacher}">
         <input type="submit" value="Go back">
     </form>
 </body>
